--- a/src/index.html
+++ b/src/index.html
@@ -35,13 +35,31 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
     <link rel="manifest" href="icons/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
 <body>
-    
+    <aside class="sidepanel">
+        <a href="#" class="sidepanel__link"><img src="icons/social/Facebook.svg" alt="Facebook"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/Instagram.svg" alt="Instagram"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/Github.svg" alt="GitHub"></a>
+        <div class="sidepanel__divider"></div>
+        <div class="sidepanel__text"><span>Социальные сети</span></div>
+    </aside>
+
+    <section class="promo">
+        <div class="container">
+            <div class="title title_fz16 promo__subtitle">Меня зовут Александра Смит</div>
+            <h1 class="title title_fz48 promo__title">Я web-разработчик из города Москва</h1>
+            <div class="promo__btns">
+                <a href="#" class="promo__link btn">Портфолио</a>
+                <a href="#" class="promo__link">Про меня</a>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
