added a script substitutes html values in sliders

--- a/src/index.html
+++ b/src/index.html
@@ -303,7 +303,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 100%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 <div class="skills-sliders__item">
@@ -313,7 +313,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 85%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 <div class="skills-sliders__item">
@@ -323,7 +323,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 90%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 <div class="skills-sliders__item">
@@ -333,7 +333,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 75%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 <div class="skills-sliders__item">
@@ -343,7 +343,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 90%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 <div class="skills-sliders__item">
@@ -353,7 +353,7 @@
                     </div>
 
                     <div class="skills-sliders__outline"></div>
-                    <div class="skills-sliders__slider" style="width: 95%"></div>
+                    <div class="skills-sliders__slider"></div>
                 </div>
 
                 
