--- a/src/index.html
+++ b/src/index.html
@@ -355,10 +355,44 @@
                     <div class="skills-sliders__outline"></div>
                     <div class="skills-sliders__slider"></div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <h2 class="title title_fz16 skills__title">Портфолио</h2>
+            <div class="title skills__subtitle">Мои работы</div>
+            <div class="divider"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio/uber.jpg" alt="example">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio/pulse.jpg" alt="example">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio/bread.jpg" alt="example">
+                </a>
+
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/portfolio/plans.jpg" alt="example">
+                </a>
+
+                <a href="#" class="portfolio__item">
+                    <img src="img/portfolio/ipad.jpg" alt="example">
+                </a>
+
+                <a href="#" class="portfolio__item horizontal">
+                    <img src="img/portfolio/mac.jpg" alt="example">
+                </a>
 
                 
+            </div>            
 
-            </div>
         </div>
     </section>
     
