--- a/src/index.html
+++ b/src/index.html
@@ -395,6 +395,65 @@
 
         </div>
     </section>
+
+    <section class="price">
+        <div class="container">
+            <h2 class="title title_fz16 skills__title">Прайс-лист</h2>
+            <div class="divider"></div>
+
+            <div class="price-grid">
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Landing-page</div>
+                        <div class="price-grid__cost">от 8000 руб.</div>
+                    </div>
+                    <div class="price-grid__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Web-приложение</div>
+                        <div class="price-grid__cost">от 28000 руб.</div>
+                    </div>
+                    <div class="price-grid__descr">Приложение внутри браузера для лучшего комфорта</div>
+                </div>
+
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Корпоративный сайт</div>
+                        <div class="price-grid__cost">от 20000 руб.</div>
+                    </div>
+                    <div class="price-grid__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Android/IOS Приложение</div>
+                        <div class="price-grid__cost">от 25000 руб.</div>
+                    </div>
+                    <div class="price-grid__descr">Приложение для смартфона любой ОС</div>
+                </div>
+
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Интернет-магазин</div>
+                        <div class="price-grid__cost">от 30000 руб.</div>
+                    </div>
+                    <div class="price-grid__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+
+                <div class="price-grid__item">
+                    <div class="price-grid__bold">
+                        <div class="price-grid__title">Дизайн</div>
+                        <div class="price-grid__cost">Индивидуально</div>
+                    </div>
+                    <div class="price-grid__descr">Создам дизайн для вашего сайта/приложения...</div>
+                </div>
+
+                
+            </div>
+        </div>
+    </section>
     
     <script src="js/script.js"></script>
 </body>
