--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
     <section class="about">
         <div class="container">
             <div class="about__grid">
-                <div class="about__grid-item">
+                <div class="about__grid-item about__photo">
                     <img src="img/Photo.jpg" alt="Photo">
                 </div>
                 <div class="about__grid-item">
